<resources>
    <string name="app_name">Wish</string>

    <string name="main_home_text">首页</string>
    <string name="main_mine_text">我的</string>
    <string name="main_center_text">发布</string>

    //login register
    <string name="login_text">立即登录</string>
    <string name="register_text">立即注册</string>
    <string name="login_name">手机号码</string>
    <string name="login_password">密码</string>
    <string name="login_set_password">设置密码</string>
    <string name="login_aff_password">再次确认密码</string>
    <string name="login_no_account">没有账户？</string>
    <string name="login_has_account">已有账户？</string>
    <string name="login_goto_login">去登录</string>
    <string name="login_goto_register">去注册</string>
    <string name="login_forget_password">忘记密码？</string>

    //publish
    <string name="publish_top_cancel">取消</string>
    <string name="publish_publish_wish">发布心愿</string>
    <string name="publish_next">下一步</string>
    <string name="publish_apply_for_help">助力心愿</string>
    <string name="publish_send">发布</string>
    <string name="publish_select_location_">选择位置</string>
    <string name="publish_please_input_title">请输入标题</string>
    <string name="publish_please_input_content">请输入内容</string>
    <string name="publish_select_time">选择发生时间</string>
    <string name="publish_select_location">选择发生位置</string>
    <string name="publish_find_people">找人</string>
    <string name="publish_select_label">选择标签</string>
    <string name="publish_select_things">找物</string>

    //detail
    <string name="wish_list_detail_title">心愿单详情</string>

    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>

    //mine
    <string name="mine_finish">完成</string>
    <string name="mine__msg_my_name">昵称</string>
    <string name="mine_msg_wish_num">心愿号</string>
    <string name="mine_msg_desc">简介</string>
    <string name="mine_msg_sex">性别</string>
    <string name="mine_msg_birthday">生日</string>
    <string name="mine_msg_binding_num">绑定账号</string>

    //wish list
    <string name="main_list_like">点赞</string>
    <string name="main_list_comment">评论</string>
</resources>
