<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    >
    <!--邮箱-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_name"
            app:hintTextAppearance="@style/TextInputAppTheme"
            android:gravity="center"
            />
    </android.support.design.widget.TextInputLayout>

    <!--密码-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:hintTextAppearance="@style/TextInputAppTheme"
            android:gravity="center"
            />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_bg"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp12"
            android:text="@string/login_text"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:drawablePadding="@dimen/dp12"
            android:drawableRight="@mipmap/arrow_login"
            />
    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>