<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/include_top_bar"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:textCursorDrawable="@color/main_tab_item_text_normal"
                android:hint="@string/publish_please_input_title"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp10"
                android:background="@mipmap/publish_no_music"
                />
        </android.support.v7.widget.LinearLayoutCompat>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:paddingTop="@dimen/dp10"
            android:paddingBottom="@dimen/dp10"
            android:background="@color/white"
            android:textSize="@dimen/sp14"
            android:textCursorDrawable="@color/main_tab_item_text_normal"
            android:hint="@string/publish_please_input_content"
            />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:background="@color/title_bg"
            android:orientation="vertical"
            android:padding="@dimen/dp10"
            >

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_select_label"
                />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/publish_label_bg"
                    android:paddingStart="@dimen/dp8"
                    android:paddingEnd="@dimen/dp8"
                    android:paddingTop="@dimen/dp5"
                    android:paddingBottom="@dimen/dp5"
                    android:text="@string/publish_find_people"
                    />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/publish_label_bg"
                    android:paddingStart="@dimen/dp8"
                    android:paddingEnd="@dimen/dp8"
                    android:paddingTop="@dimen/dp5"
                    android:paddingBottom="@dimen/dp5"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/publish_select_things"
                    />

                <EditText
                    android:layout_width="@dimen/dp40"
                    android:layout_height="wrap_content"
                    android:background="@drawable/publish_label_bg"
                    android:paddingStart="@dimen/dp8"
                    android:paddingEnd="@dimen/dp8"
                    android:paddingTop="@dimen/dp5"
                    android:paddingBottom="@dimen/dp5"
                    android:layout_marginStart="@dimen/dp5"
                    />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/publish_select_time"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:drawableEnd="@mipmap/publish_select_time"
                android:background="@drawable/publish_label_bg"
                android:paddingStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:paddingTop="@dimen/dp5"
                android:paddingBottom="@dimen/dp5"
                android:drawablePadding="@dimen/dp10"
                android:text="2008-09-14"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/publish_select_location"
                />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:drawableEnd="@mipmap/location_gray"
                android:drawablePadding="@dimen/dp10"
                android:background="@drawable/publish_label_bg"
                android:paddingStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:paddingTop="@dimen/dp5"
                android:paddingBottom="@dimen/dp5"
                android:text="2008-09-14"
                />
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:text="匿名"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            >

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_select_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/publish_add_pic"
                />
        </RelativeLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>