<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/line_bg"
    >
    <include layout="@layout/include_top_bar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/line_bg"
        />
    <com.chs.core.widget.CircleImageView
        android:id="@+id/iv_author"
        android:layout_width="@dimen/dp80"
        android:layout_height="@dimen/dp80"
        android:src="@mipmap/head"
        android:layout_marginTop="@dimen/dp10"
        android:layout_gravity="center_horizontal"
        />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine__msg_my_name"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:text="果子熟了"
            />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp1"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_msg_wish_num"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:text="HGSUOEFGHJ1123"
            />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp1"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_msg_desc"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:text="有人爱，有所是，有所期待"
            />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center_vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_msg_sex"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_weight="1"
            android:text="男"
            />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_go_to_select"
            android:layout_marginEnd="@dimen/dp10"
            />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp1"
        android:gravity="center_vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_msg_birthday"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_weight="1"
            android:text="1989-10-13"
            />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_go_to_select"
            android:layout_marginEnd="@dimen/dp10"
            />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp10"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center_vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_msg_binding_num"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_weight="1"
            android:text=""
            />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_go_to_select"
            android:layout_marginEnd="@dimen/dp10"
            />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>